--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,15 @@ html, body {
 }
 
 .container {
-	box-sizing: content-box;
-	width: 45%;
-	margin: 0 auto;
-	position: relative;
-	top: 15vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-
+	position: relative;
+	top: 15vh;
+	box-sizing: content-box;
+	width: 45%;
+	margin: 0 auto;
 }
 
 form {
@@ -33,8 +32,8 @@ input {
 	box-sizing: border-box;
 	width: 100%;
 	padding: 5px 4px;
-	margin-bottom: 10px;
 	border: 1.5px solid black;
+	margin-bottom: 10px;
 	font-family: 'Space Mono', monospace;
 	font-style: italic;
 	font-size: 20px;
@@ -49,18 +48,33 @@ input {
 ul {
 	box-sizing: border-box;
 	width: 100%;
-	list-style-type: none;
 	border-top: 1.5px solid black;
 	border-left: 1.5px solid black;
+	list-style-type: none;
 }
 
 li {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	padding: 5px 4px;
 	border-bottom: 1.5px solid black;
 	border-right: 1.5px solid black;
 }
 
-li:hover {
+i {
+	margin-right: 10px;
+}
+
+i:hover {
+	color: red;
+	cursor: pointer;
+}
+
+li:hover, .strike {
+	color: red;
+	
+/*
 	text-decoration-line: line-through;
 	text-decoration-color: red;
 	text-decoration-style: solid;
@@ -72,6 +86,7 @@ li:hover {
 	-webkit-text-decoration-line: line-through;
 	-webkit-text-decoration-color: red;
 	-webkit-text-decoration-style: solid;
+*/
 }
 
 /**Footer**/
