--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ html, body {
 	margin: 0 auto;
 }
 
-
 h1 {
 	text-align: left;
 }
@@ -58,23 +57,17 @@ li {
 	border-right: 1.5px solid black;
 }
 
-i {
+a {
 	margin-right: 10px;
+	color: #d5d8dc;
 }
 
-i:hover {
+a:hover {
 	color: red;
 	cursor: pointer;
 }
 
 li:hover, .strike {
-	color: red;
-	
-/*
-	text-decoration-line: line-through;
-	text-decoration-color: red;
-	text-decoration-style: solid;
-
 	-moz-text-decoration-line: line-through;
 	-moz-text-decoration-color: red;
 	-moz-text-decoration-style: solid;
@@ -82,7 +75,10 @@ li:hover, .strike {
 	-webkit-text-decoration-line: line-through;
 	-webkit-text-decoration-color: red;
 	-webkit-text-decoration-style: solid;
-*/
+
+	text-decoration-line: line-through;
+	text-decoration-color: red;
+	text-decoration-style: solid;
 }
 
 /**Footer**/
